# LinuxRemoteDesktopXR

./: .gitignore  CMakeLists.txt  readme.md
android_client/: local.properties  settings.gradle
android_client/app/: build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/rldxr/client/: CursorOverlayView.kt  MainActivity.kt  RtpDepacketizer.kt  VideoDecoder.kt
android_client/app/src/main/res/layout/: activity_main.xml
android_client/app/src/main/res/values/: strings.xml  themes.xml
client/: build.gradle  settings.gradle
client/app/: build.gradle
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/lrdxr/client/: MainActivity.kt
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/values/: strings.xml  themes.xml
client/app/src/main/res/xml/: data_extraction_rules.xml
host/: display_manager.py  index.html  signaling_server.py  streamer.py
src/: Capture.cpp  Capture.h  Encoder.cpp  Encoder.h  FrameQueue.h  MouseTracker.cpp  MouseTracker.h  Network.cpp  Network.h  main.cpp
